# phrt

./: .dockerignore  Cargo.toml  LICENSE  README.md  compose.yaml  fly.toml
assets/css/: icons.css  site.css  theme.css
crates/loki/: Cargo.toml
crates/loki-migration/: Cargo.toml
crates/loki-migration/src/: applied_revision.rs  lib.rs  migrate_store.rs  migration.rs  postgres_revision_storage.rs  revision.rs  revision_list.rs
crates/loki/src/: application.rs  cache.rs  lib.rs  page.rs  page_builder.rs  page_metadata.rs  registry.rs  server.rs
src/: authentication.rs  config.rs  database.rs  main.rs  migrations.rs
src/routes/: home.rs  mod.rs  news.rs
src/services/: mod.rs  news_store.rs  user_store.rs
templates/content/: donate.tera  home.json  home.tera  host_us.tera  login.tera  map.tera  news.hbs  news.json  news.tera  updates.tera  volunteer.tera
templates/content/news/: delete_dialog.tera  edit.hbs  edit.tera  list.hbs  list.tera  render_item.tera
templates/layout/: admin.hbs  main.hbs  main.json  main.tera
