[package]
name = "loki"
edition.workspace = true
version.workspace = true

[dependencies]
handlebars.workspace = true
tracing.workspace = true
axum.workspace = true
tokio.workspace = true
mockall.workspace = true
bon.workspace = true
anyhow.workspace = true
tower.workspace = true
tower-http.workspace = true
axum-server = "0.7.2"
futures = "0.3.31"
serde.workspace = true
serde_json.workspace = true
thiserror = "2.0.12"
chrono.workspace = true
walkdir = "2.5.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
